# artist-album-catalog

./: Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
server/: settings.py
server/api/: admin.py  models.py
server/api/fixtures/: sample.json
server/api/migrations/: 0001_initial.py
