[tool.poetry]
name = "artist-album-catalog"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asalbert@narod.ru>"]
readme = "README.md"
packages = [{include = "artist_album_catalog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
